# location-AndroidQT

./: CMakeLists.txt  LocationManager.cpp  LocationManager.h  LocationPresenter.cpp  LocationPresenter.h  LocationView.qml  Main.qml  PermissionManager.cpp  PermissionManager.h  PermissonPresenter.cpp  PermissonPresenter.h  PermissonsView.qml  activityhandler.cpp  activityhandler.h  main.cpp  resource.qrc
android/: AndroidManifest.xml
